metadata/force-app/main/default/objects/CustomName_wAwjX__c/CustomName_wAwjX__c.object-meta.xml
<CustomObject>
    <description>Description_NnFhk</description>
    <label>CustomLabel_AcKyw</label>
    <nameField>
        <label>CustomLabel_AcKyw</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_AcKyws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>