metadata/force-app/main/default/objects/CustomName_wAwjX__c/fields/CustomField_HfgpL__c.field-meta.xml
<CustomField>
    <fullName>CustomField_HfgpL__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAOqCd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>