metadata/force-app/main/default/objects/CustomName_wAwjX__c/fields/CustomField_UiCXd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_UiCXd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTWuQI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>