metadata/force-app/main/default/objects/CustomName_wAwjX__c/fields/CustomField_UkBsT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_UkBsT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfaqhE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>